// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> component should render correctly 1`] = `
<div
  className="app"
  data-theme="test-theme"
>
  <Router>
    <Header />
    <main
      className="appContent"
    >
      <Switch>
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />
        <Route
          component={[Function]}
          path="/about"
        />
        <Route
          component={[Function]}
        />
      </Switch>
    </main>
    <Footer />
    <CookieDisclaimer />
  </Router>
</div>
`;

exports[`<App/> component when the theme is dark should render correctly 1`] = `
<div
  className="app app__dark"
  data-theme="DARK_THEME"
>
  <Router>
    <Header />
    <main
      className="appContent appContent__dark"
    >
      <Switch>
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />
        <Route
          component={[Function]}
          path="/about"
        />
        <Route
          component={[Function]}
        />
      </Switch>
    </main>
    <Footer />
    <CookieDisclaimer />
  </Router>
</div>
`;
